2005-12-05  Eric Seidel  <eseidel@apple.com>

        Rubber-stamped by mjs.

        Changed "Resources" to "resources" to match other layout tests.

        * svg/W3C-SVG-1.1/color-prof-01-f.svg:
        * svg/W3C-SVG-1.1/filters-conv-01-f.svg:
        * svg/W3C-SVG-1.1/filters-diffuse-01-f.svg:
        * svg/W3C-SVG-1.1/filters-displace-01-f.svg:
        * svg/W3C-SVG-1.1/filters-image-01-b.svg:
        * svg/W3C-SVG-1.1/filters-light-01-f.svg:
        * svg/W3C-SVG-1.1/filters-specular-01-f.svg:
        * svg/W3C-SVG-1.1/fonts-elem-03-b.svg:
        * svg/W3C-SVG-1.1/fonts-elem-04-b.svg:
        * svg/W3C-SVG-1.1/interact-cursor-01-f.svg:
        * svg/W3C-SVG-1.1/interact-order-02-b.svg:
        * svg/W3C-SVG-1.1/interact-order-03-b.svg:
        * svg/W3C-SVG-1.1/linking-a-01-b.svg:
        * svg/W3C-SVG-1.1/linking-a-02-b.svg:
        * svg/W3C-SVG-1.1/linking-a-03-b.svg:
        * svg/W3C-SVG-1.1/linking-a-04-t.svg:
        * svg/W3C-SVG-1.1/linking-uri-02-b.svg:
        * svg/W3C-SVG-1.1/linking-uri-03-t.svg:
        * svg/W3C-SVG-1.1/masking-path-04-b.svg:
        * svg/W3C-SVG-1.1/render-groups-01-b.svg:
        * svg/W3C-SVG-1.1/render-groups-03-t.svg:
        * svg/W3C-SVG-1.1/struct-image-01-t.svg:
        * svg/W3C-SVG-1.1/struct-image-02-b.svg:
        * svg/W3C-SVG-1.1/struct-image-03-t.svg:
        * svg/W3C-SVG-1.1/struct-image-05-b.svg:
        * svg/W3C-SVG-1.1/struct-symbol-01-b.svg:
        * svg/W3C-SVG-1.1/text-tref-01-b.svg:

2005-12-05  Eric Seidel  <eseidel@apple.com>

        Updating all the SVG tests with their latest post-merger results.
        There are still issues which will prevent these from passing on
        all machines:
        http://bugzilla.opendarwin.org/show_bug.cgi?id=4515
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5962

        * svg/W3C-SVG-1.1/animate-elem-04-t-expected.checksum:
        * svg/W3C-SVG-1.1/animate-elem-05-t-expected.checksum:
        * svg/W3C-SVG-1.1/animate-elem-06-t-expected.checksum: